// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / Parameters / Layout Centered 1`] = `
<storybook-wrapper>
  <storybook-button-component
    ng-reflect-text="Button"
  >
    <button>
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout Default 1`] = `
<storybook-wrapper>
  <storybook-button-component
    ng-reflect-text="Button"
  >
    <button>
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout Fullscreen 1`] = `
<storybook-wrapper>
  <div
    style="background-color: yellow;"
  >
    <storybook-button-component
      ng-reflect-text="Button"
      text="Button"
    >
      <button>
        Button
      </button>
    </storybook-button-component>

  </div>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout None 1`] = `
<storybook-wrapper>
  <storybook-button-component
    ng-reflect-text="Button"
  >
    <button>
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout Padded 1`] = `
<storybook-wrapper>
  <storybook-button-component
    ng-reflect-text="Button"
  >
    <button>
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
